--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "weather-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Secure full-stack weather application",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
+    "start": "node server.js",
+    "dev": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "weather",
+    "node",
+    "express",
+    "fullstack"
+  ],
+  "author": "Nancy Sangani",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "vercel": "^50.14.1"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
